Working on the bookstrore application